--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -40,7 +40,7 @@
                 <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" id="remember_me" name="_remember_me">
                     <label class="form-check-label" for="remember_me">
-                        Remember me
+                        Recuérdame
                     </label>
                 </div>
 
